# cscd477-Assignment-3

./: README.md
MedicalProbed/src/: CMakeLists.txt  MedicalProbed.cxx
src/: CMakeLists.txt  Medical.cxx
